omweather (0.25.2) unstable; urgency=low

  * Fixed problem with updating if GSM and WLAN checkboxes is disabled
  * Fixed bug #6488 "Cannot use desktop when omweather details open"

 -- Vlad Vasiliev <vlad@gas.by>  Tue, 04 Thu 2010 19:11:10 +0200

omweather (0.25.1) unstable; urgency=low

  * Fixed problem with autoupdating and with updating in first start 

 -- Vlad Vasiliev <vlad@gas.by>  Tue, 02 Feb 2010 13:10:10 +0200

omweather (0.25) unstable; urgency=low

  * Various minor fixes
  * Created animations for icons using HildonAnimation functions
  * Changed default vaild time for current weather to 4 hours
  * Done backup mechanism for Fremantle
  * Increased iccons on toolbar in application mode

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 27 Sep 2009 11:20:10 +0200

omweather (0.24.11) unstable; urgency=low

  * Fixed bug #5592 "Add Beaufort scale for wind speed"
  * Fixed bug #6339 "Decimal points in wind speed values are always "00" for kilometers per hour"
  * Fixed problem with updating weather forecast for more than for 5 stations
  * Fixed problem with killing omweather in application mode
  * Fixed problem with help files for OS2008 (Diablo, Chinook)
  * Removed file omweather.xml from root directory
  * Fixed a small memeory leak

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 30 Nov 2009 19:29:11 +0200

omweather (0.24.10) unstable; urgency=low

  * Fixed problem with i18n
  * Updated German, Finish, Spanish, Russian translations

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 28 Nov 2009 19:29:11 +0200
 
omweather (0.24.9) unstable; urgency=low

  * Fixed problem with start by a browser after click in wearther source url
  * Weather.com stations db is default now
  * Fixed bug #5975 "Update weather" <information banner> should be "Updating weather"
  * Fixed bug #5986 "No auto-updates via gsm network"
  * Fixed bug #6226 "Add Polish translation"
  * Fixed bug #5977 "Settings buttons should have left aligned text"
  * Fixed bug #5878 "problem with widgets layout"