@@ -8,7 +8,7 @@
 
 
 #CFLAGS = -Wall -pedantic -DRELEASE -DDEBUGFUNCTIONCALL -g 
-CFLAGS = -Wall -pedantic -DRELEASE -UDEBUGCALL
+CFLAGS = -Wall -pedantic -DRELEASE -UDEBUGCALL 
 #CFLAGS = -Wall -pedantic   
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
